# display-board-pico

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  gdbcommands
action/: CMakeLists.txt  action.c
action/include/: action.h
drum/: CMakeLists.txt  drum.c
drum/include/: drum.h
i2c-controller/: CMakeLists.txt  i2c-controller.c
i2c_controller/: CMakeLists.txt  i2c_controller.c
i2c_controller/include/: i2c_controller.h
midi/: CMakeLists.txt  midi.c
midi/include/: midi.h
pio-display/: CMakeLists.txt
pio-display/include/: pio_display.h
pio_display/: CMakeLists.txt  fonts.inc  pio_display.c  pio_display_draw.c  spi.pio
pio_display/include/: pio_display.h
sdhi/: CMakeLists.txt  sdhi.c
sdhi/include/: sdhi.h
setup/: CMakeLists.txt
setup/include/: setup.h
src/: CMakeLists.txt  main.c  pio-display.c  spi.pio
